--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,4 @@ jobs:
       - name: Build and push Docker image
         run: |
           DATE=$(date +"%d%m%Y")
-          docker buildx build --push --tag ghcr.io/${{ 
-          github.repository_owner }}/front:$DATE --tag ghcr.io/${{
-          github.repository_owner }}/front:latest .
+          docker buildx build --push --tag ghcr.io/benjamin-htr/front:$DATE --tag ghcr.io/benjamin-htr/front:latest .
